--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <style type="text/css">
 	h1{
 		font-size: 50px;
-		background: blue;
+		background-color: green;
+		color: white;
+
 	}
 </style>
 </body>
